[gd_scene load_steps=33 format=3 uid="uid://cobscoe13beka"]

[ext_resource type="Script" path="res://Player/Heesoo.gd" id="1_m0s4d"]
[ext_resource type="Texture2D" uid="uid://dk7j6r0n22xsn" path="res://Art/characters/HeeSoo/HeeSoo-32-Sheet.png" id="2_45tl4"]
[ext_resource type="PackedScene" uid="uid://cw5tvrgclens4" path="res://Utility/hurtbox.tscn" id="3_5mg1w"]
[ext_resource type="PackedScene" uid="uid://cy0nw2knakaou" path="res://Attack/gaslight/gas_light_path.tscn" id="4_8kh70"]

[sub_resource type="AtlasTexture" id="AtlasTexture_n0r3d"]
atlas = ExtResource("2_45tl4")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mw0j1"]
atlas = ExtResource("2_45tl4")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlewb"]
atlas = ExtResource("2_45tl4")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ruyh"]
atlas = ExtResource("2_45tl4")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0yia"]
atlas = ExtResource("2_45tl4")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqiwk"]
atlas = ExtResource("2_45tl4")
region = Rect2(448, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_70ioo"]
atlas = ExtResource("2_45tl4")
region = Rect2(480, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkao0"]
atlas = ExtResource("2_45tl4")
region = Rect2(512, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_64wie"]
atlas = ExtResource("2_45tl4")
region = Rect2(544, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5vym"]
atlas = ExtResource("2_45tl4")
region = Rect2(576, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xgo8h"]
atlas = ExtResource("2_45tl4")
region = Rect2(608, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t786n"]
atlas = ExtResource("2_45tl4")
region = Rect2(640, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvag6"]
atlas = ExtResource("2_45tl4")
region = Rect2(672, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_67gat"]
atlas = ExtResource("2_45tl4")
region = Rect2(704, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fwvd"]
atlas = ExtResource("2_45tl4")
region = Rect2(736, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ococn"]
atlas = ExtResource("2_45tl4")
region = Rect2(768, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4khu"]
atlas = ExtResource("2_45tl4")
region = Rect2(800, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ouhx"]
atlas = ExtResource("2_45tl4")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fw20o"]
atlas = ExtResource("2_45tl4")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdh1l"]
atlas = ExtResource("2_45tl4")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ie7q"]
atlas = ExtResource("2_45tl4")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r25m1"]
atlas = ExtResource("2_45tl4")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3m27s"]
atlas = ExtResource("2_45tl4")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4nb1j"]
atlas = ExtResource("2_45tl4")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_k4i74"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0r3d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mw0j1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlewb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ruyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0yia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqiwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70ioo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkao0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_64wie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5vym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xgo8h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t786n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvag6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_67gat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fwvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ococn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4khu")
}],
"loop": true,
"name": &"die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ouhx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fw20o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdh1l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ie7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r25m1")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3m27s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4nb1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3m27s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4nb1j")
}],
"loop": true,
"name": &"walk",
"speed": 6.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5s15u"]
radius = 7.0
height = 22.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7r1g6"]
size = Vector2(12, 22)

[sub_resource type="CircleShape2D" id="CircleShape2D_fkl8t"]
radius = 374.192

[node name="Heesoo" type="CharacterBody2D" groups=["player"]]
y_sort_enabled = true
disable_mode = 2
motion_mode = 1
script = ExtResource("1_m0s4d")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
sprite_frames = SubResource("SpriteFrames_k4i74")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_5s15u")

[node name="Hurtbox" parent="." instance=ExtResource("3_5mg1w")]
collision_layer = 2
collision_mask = 2
HurtBoxType = 2

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_7r1g6")

[node name="Attack" type="Node2D" parent="."]

[node name="EarPickTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 1.5

[node name="EarPickAttackTimer" type="Timer" parent="Attack/EarPickTimer"]
unique_name_in_owner = true
wait_time = 0.075

[node name="FannyPackTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 2.0

[node name="FannyPackAttackTimer" type="Timer" parent="Attack/FannyPackTimer"]
unique_name_in_owner = true
wait_time = 0.4

[node name="GasLightTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true

[node name="GasLightAttackTimer" type="Timer" parent="Attack/GasLightTimer"]
unique_name_in_owner = true

[node name="EnemyDetectionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
position = Vector2(6, -42)
shape = SubResource("CircleShape2D_fkl8t")

[node name="GasLightPath" parent="." instance=ExtResource("4_8kh70")]
y_sort_enabled = true

[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt"]
[connection signal="timeout" from="Attack/EarPickTimer" to="." method="_on_ear_pick_timer_timeout"]
[connection signal="timeout" from="Attack/EarPickTimer/EarPickAttackTimer" to="." method="_on_ear_pick_attack_timer_timeout"]
[connection signal="timeout" from="Attack/FannyPackTimer" to="." method="_on_fanny_pack_timer_timeout"]
[connection signal="timeout" from="Attack/FannyPackTimer/FannyPackAttackTimer" to="." method="_on_fanny_pack_attack_timer_timeout"]
[connection signal="timeout" from="Attack/GasLightTimer" to="." method="_on_gas_light_timer_timeout"]
[connection signal="timeout" from="Attack/GasLightTimer" to="GasLightPath" method="_on_gas_light_timer_timeout"]
[connection signal="timeout" from="Attack/GasLightTimer/GasLightAttackTimer" to="." method="_on_gas_light_attack_timer_timeout"]
[connection signal="timeout" from="Attack/GasLightTimer/GasLightAttackTimer" to="GasLightPath" method="_on_gas_light_attack_timer_timeout"]
[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]

[editable path="Hurtbox"]
